--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
 	"name": "react-class-to-functional",
-	"displayName": "react-class-to-functional",
+	"displayName": "React: class to functional",
 	"description": "Turn React Class Components into Functional Components",
 	"version": "0.0.1",
+	"publisher": "laegel",
+	"icon": "images/react.png",
+	"repository": {
+		"url": "https://github.com/Laegel/react-class-to-function"
+	},
 	"engines": {
 		"vscode": "^1.65.0"
 	},
@@ -12,7 +17,7 @@
 	"activationEvents": [
 		"onCommand:react-class-to-functional.transform"
 	],
-	"main": "./out/extension.js",
+	"main": "./dist/extension.js",
 	"contributes": {
 		"commands": [
 			{
@@ -23,7 +28,7 @@
 	},
 	"scripts": {
 		"vscode:prepublish": "yarn run compile",
-		"compile": "tsc -p ./",
+		"compile": "webpack --config webpack.config.js",
 		"watch": "tsc -watch -p ./",
 		"pretest": "yarn run compile && yarn run lint",
 		"lint": "eslint src --ext ts",
@@ -41,7 +46,10 @@
 		"eslint": "^8.9.0",
 		"glob": "^7.2.0",
 		"mocha": "^9.2.1",
-		"typescript": "npm:typescript@4.6.2"
+		"ts-loader": "^9.2.8",
+		"typescript": "npm:typescript@4.6.2",
+		"webpack": "^5.70.0",
+		"webpack-cli": "^4.9.2"
 	},
 	"dependencies": {
 		"@phenomnomnominal/tsquery": "^4.2.0",
